# ros2-opencv

./: CMakeLists.txt  README.md  package.xml
config/: ros2_opencv.rviz
include/ros2_opencv/data_processor/: ImageDataProvider.hpp  Inference.hpp  Recognizer.hpp
launch/: ros2-opencv.launch.xml
src/: main.cpp
src/data_processor/: ImageDataProvider.cpp  Inference.cpp  Recognizer.cpp
